<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cardView"
    android:layout_width="@dimen/card_width"
    android:layout_height="@dimen/card_height"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="@dimen/margin_small"
    app:cardCornerRadius="4dp"
    android:layout_gravity="center_horizontal"
    android:layout_margin="@dimen/margin_small"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_form_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:fontFamily="sans-serif-medium"
            android:text="@string/inka_restaurent"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Inka Restaurent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_card_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/card_subtitle"
            app:layout_constraintEnd_toEndOf="@+id/tv_form_title"
            app:layout_constraintHorizontal_bias="0.42"
            app:layout_constraintStart_toStartOf="@+id/tv_form_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_form_title" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_card_subtitle"
            app:layout_constraintEnd_toStartOf="@+id/tv_card_subtitle"
            app:layout_constraintTop_toTopOf="@+id/tv_card_subtitle"
            app:srcCompat="@drawable/ic_star" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_contact"
            app:layout_constraintEnd_toStartOf="@+id/tv_contact"
            app:layout_constraintTop_toTopOf="@+id/tv_contact"
            app:srcCompat="@drawable/ic_call" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/card_contact"
            app:layout_constraintEnd_toEndOf="@+id/tv_card_subtitle"
            app:layout_constraintStart_toStartOf="@+id/tv_card_subtitle"
            app:layout_constraintTop_toBottomOf="@+id/tv_card_subtitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_book_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/book_table"
            android:padding="7dp"
            android:textColor="@color/white"
            android:background="@drawable/bg_book_btn"
            app:layout_constraintEnd_toEndOf="@+id/tv_contact"
            app:layout_constraintStart_toStartOf="@+id/tv_contact"
            app:layout_constraintTop_toBottomOf="@+id/tv_contact" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>