<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />

        <variable
            name="totalPrice"
            type="String" />

        <variable
            name="state"
            type="com.aman.foodordering.ui.MainState" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
                app:contentScrim="?attr/colorPrimary"
                app:elevation="0dp"
                app:expandedTitleMarginStart="20dp"
                app:expandedTitleTextAppearance="@style/ExpandedCollapsedAppBar"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:scrimAnimationDuration="200">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="252dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cart_cardView"
                        android:layout_width="@dimen/cart_card_width"
                        android:layout_height="@dimen/cart_card_height"
                        app:cardBackgroundColor="@color/white"
                        app:cardElevation="@dimen/margin_small"
                        app:cardCornerRadius="7dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/margin_small"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_total_cost"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_small"
                                android:fontFamily="sans-serif-medium"
                                android:text="@string/total_cost"
                                android:textColor="@color/item_color"
                                android:textSize="18sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.15000002" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:fontFamily="sans-serif-medium"
                                android:text="@{totalPrice}"
                                android:textSize="22sp"
                                android:textColor="@color/colorPrimaryDark"
                                app:layout_constraintEnd_toEndOf="@+id/tv_total_cost"
                                app:layout_constraintStart_toStartOf="@+id/tv_total_cost"
                                app:layout_constraintTop_toBottomOf="@+id/tv_total_cost"
                                tools:text="€36.00" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/ToolBarStyle"
                    app:elevation="0dp"
                    app:layout_collapseMode="pin">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btn_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_arrow_back"
                        android:padding="15dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:paddingStart="12dp"
                        android:text="@string/my_cart"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:visibility="visible" />

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.cart.CartActivity"
                android:visibility="@{state.success ? View.VISIBLE : View.GONE}">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_review_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/review_orders"
                    android:textColor="@android:color/background_dark"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_cart"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_review_cart" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/cart_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{state.loading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <View
                android:id="@+id/view_place_order_bottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_view"
                android:background="@drawable/bg_bottom_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_total_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/place_order"
                android:textColor="@android:color/background_light"
                app:layout_constraintBottom_toBottomOf="@+id/view_place_order_bottom"
                app:layout_constraintEnd_toEndOf="@+id/view_place_order_bottom"
                app:layout_constraintStart_toStartOf="@+id/view_place_order_bottom"
                app:layout_constraintTop_toTopOf="@+id/view_place_order_bottom"
                tools:text="PLACE ORDER"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>